--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fontsly</title>
-</head>
-<body>
   <ul>
     <li>
       <a href="build/main.html">Main page</a>
@@ -28,5 +26,29 @@
       <a href="build/4_inner_b.html">4 Inner B</a>
     </li>
   </ul>
+</head>
+<body>
+  <div class="block">
+    <ul>
+      <li>
+        <a href="build/main.html">Main page</a>
+      </li>
+      <li>
+        <a href="build/1_inner.html">1 Inner</a>
+      </li>
+      <li>
+        <a href="build/2_inner.html">2 Inner</a>
+      </li>
+      <li>
+        <a href="build/3_inner.html">3 Inner</a>
+      </li>
+      <li>
+        <a href="build/4_inner.html">4 Inner A</a>
+      </li>
+      <li>
+        <a href="build/4_b_inner.html">4 Inner B</a>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
