--- a/index.html
+++ b/index.html
@@ -6,26 +6,36 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fontsly</title>
-  <ul>
-    <li>
-      <a href="build/main.html">Main page</a>
-    </li>
-    <li>
-      <a href="build/1_inner.html">1 Inner</a>
-    </li>
-    <li>
-      <a href="build/2_inner.html">2 Inner</a>
-    </li>
-    <li>
-      <a href="build/3_inner.html">3 Inner</a>
-    </li>
-    <li>
-      <a href="build/4_inner.html">4 Inner A</a>
-    </li>
-    <li>
-      <a href="build/4_inner_b.html">4 Inner B</a>
-    </li>
-  </ul>
+  <style>
+    .block {
+      width: 400px;
+      margin: 50px auto;
+      color: #425EB2;
+      font-family: 'Open Sans', sans-serif;
+    }
+
+    h1 {
+      border-bottom: 2px solid #0097E8;
+    }
+
+    ul {
+      margin-top: 30px;
+      list-style-type: none;
+    }
+
+    li {
+      margin: 10px 0;
+    }
+
+    a {
+      font-size: 15px;
+      color: #425EB2;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <div class="block">
